# api/internal/handler/sys/user/userupdatehandler.go
@@ -1,0 +1,28 @@
+package handler
+
+import (
+	"net/http"
+	"pure-go-zero-admin/api/internal/logic/sys/user"
+
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"pure-go-zero-admin/api/internal/svc"
+	"pure-go-zero-admin/api/internal/types"
+)
+
+func UserUpdateHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.UpdateUserReq
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := logic.NewUserUpdateLogic(r.Context(), svcCtx)
+		resp, err := l.UserUpdate(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
